data/derived/comb/progs/unify/prog6467.ml.out
Characters 94-95:
  |false->h
          ^
Error: This expression has type bool but an expression was expected of type
         bool list
